@@ -17,5 +17,7 @@ New in 0.1.6
 - Added clone method to VIVirtualMachine
 - Added get_question method to VM (returns object with question info and answer method)
 - Fix bug in get_vm_by_path
-- Added method get_datastores
+- Added method get_datastores in VIServer
 - Fix issue 3, 4
+- Added method migrate in VIVirtualMachine
+- Added VIMor class
